2005-12-05  Yves Combe  <yves@ycombe.net>

	* src/boards/gtans.c: fixed widget being over the help

2005-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/administration.py: fixed widget being over the help
	* src/boards/python/electric.py: improved. now should no more crash gcompris if python 2.4
	  is not available. the activity will not work without warning.

2005-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	Fix Debian Bug#341280
	Our automated buildd log filter[1] detected a problem that will cause
        your package to segfault on architectures where the size of a pointer is
        greater than the size of an integer, such as ia64.
	
	* src/boards/py-gcompris-wordlist.h:
	* src/boards/python/electric.py:
	* src/gcompris/gcompris.c: (setup_window):

2005-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	Proof of concect for electric activity is almost completed.
	If /usr/bin/gnucap is installed, create a schematic and click
	the OK button. The voltage and current value will be displayed
	on stdout.

	* boards/boardicons/electric.png:
	* boards/electric.xml.in:
	* boards/electric/battery.png:
	* boards/electric/bulb.png:
	* boards/electric/connect.png:
	* boards/electric/diod.png:
	* boards/electric/resistor.png:
	* src/boards/python/electric.py:

2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Started the electric activiry. Nothing runs yet.

	* boards/electric.xml.in:

2005-11-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Hungarian audio voices by
	Miklos Merenyi & Margareta Merenyi Released under GPL.
	Updated web site screenshots.
	Aplyed patch from Yann Dirson for Python detection.
	
	* boards/Makefile.am:
	* boards/colors.xml.in:
	* boards/sounds/Makefile.am:
	* boards/sounds/hu/.cvsignore:
	* boards/sounds/hu/Makefile.am:
	* boards/sounds/hu/alphabet/.cvsignore:
	* boards/sounds/hu/alphabet/10.ogg:
	* boards/sounds/hu/alphabet/11.ogg:
	* boards/sounds/hu/alphabet/12.ogg:
	* boards/sounds/hu/alphabet/13.ogg: