@@ -1,3 +1,11 @@
+2005-12-05  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Added a fix to let the fullscreen happen only when the window is mapped
+
+	* src/boards/python/electric.py:
+	* src/gcompris/gcompris.c: (setup_window),
+	(gcompris_set_fullscreen), (quit_cb), (map_cb):
+
 2005-12-05  Yves Combe  <yves@ycombe.net>
 
 	* src/boards/gtans.c: fixed widget being over the help
